# Rlang

./: CMakeLists.txt  LICENSE  README.md  cmake-presets.json
Python/: MANIFEST_RLang_v1.md
Rlang_Full_Package_Pro/: CMakeLists.txt  LICENSE.md  README.md
Rlang_Full_Package_Pro/docs/: README.txt
Rlang_Full_Package_Pro/examples/: audio_synth.py  profile.txt  state.json
Rlang_Full_Package_Pro/examples/web/: index.html
Rlang_Full_Package_Pro/rlang_py/: __init__.py  interpreter.py
Rlang_Full_Package_Pro/scripts/: build_wasm.sh
Rlang_Full_Package_Pro/tests/: run_golden.py
Rlang_Full_Package_Pro_v2/: CMakeLists.txt  LICENSE.md  README.md  pyproject.toml
Rlang_Full_Package_Pro_v2/docs/: API_REFERENCE.md  BENCHMARKS.md  CHANGELOG.md  RLang_Math_Foundation.md  TUTORIAL_Quickstart.md  USE_CASES_AI.md
Rlang_Full_Package_Pro_v2/examples/: ai_agent_drift_demo.py  audio_synth.py
Rlang_Full_Package_Pro_v2/examples/dsl/: example_agents_v0_4.rlang  example_c_major_v0_7_2.rlang
Rlang_Full_Package_Pro_v2/examples/web/: index.html
Rlang_Full_Package_Pro_v2/integrations/: gymnasium_env.py  pytorch_rlang.py
Rlang_Full_Package_Pro_v2/rlang_cpp/cuda/: main_cuda.cpp  rlang_cuda.cu
Rlang_Full_Package_Pro_v2/rlang_cpp/include/: rlang.hpp  rlang_scheduler.hpp
Rlang_Full_Package_Pro_v2/rlang_cpp/src/: main.cpp  rlang.cpp  rlang_scheduler.cpp  rlang_simd.cpp
Rlang_Full_Package_Pro_v2/rlang_py/: __init__.py  cli.py  interpreter.py  profile.py
Rlang_Full_Package_Pro_v2/rlang_py/optimizers/: adam.py
Rlang_Full_Package_Pro_v2/rlang_py/parser/: rlang_parser.py
Rlang_Full_Package_Pro_v2/rlang_py/profiles/: __init__.py  ai_alignment.py  music.py  neuro.py  robotics.py
Rlang_Full_Package_Pro_v2/scripts/: build_wasm.sh
Rlang_Full_Package_Pro_v2/tests/: run_golden.py
Rlang_Full_Package_Pro_v2/tests/golden/: profile.json
examples/: audio_triads.cpp  opt_adam.cpp  triad_lock.cpp  wasm_demo.cpp
include/: rlang_audio.hpp  rlang_cuda_host.hpp  rlang_fast_simd.hpp  rlang_opt_adam.hpp  rlang_system_gpu.hpp
rlang-ai-integration/: INSTALL_WINDOWS.md  LICENSE  QUICKSTART.md  README.md  requirements.txt
rlang-ai-integration/scripts/: quick_pilot.py  setup.py
rlang-ai-integration/tests/: test_basic.py
rlang_addons_v1/: README_ADDON.md  requirements.txt
rlang_addons_v1/analysis/: stats.py
rlang_addons_v1/configs/: default.yaml
rlang_addons_v1/scripts/: run_experiment.py
rlang_addons_v1/utils/: seed.py
rlang_cpp/: main.cpp
rlang_cpp/include/: rlang.hpp
rlang_cpp/src/: rlang.cpp
rlang_py/: rlang_ref.py
src/: rlang_cuda_host.cpp  rlang_system_gpu.cpp
tests/: run_golden.py
tests/golden/: profile.json  state.json
tools/: phase_view.py
vscode/: package.json
vscode/syntaxes/: rlang.tmLanguage.json
(+20 files in other folders)
